[metadata]
name = metonic
version = 0.0.1
author = Sean Redmond
author_email = github-smr@sneakemail.com
description = Metonic cycle generator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seanredmond/metonic
project_urls =
    Bug Tracker = https://github.com/seanredmond/metonic/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8


